add block  Why choose us?

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
 			<!-- Продукт -->
 
-			<section class="product container">
+			<section class="product container none">
 				<img class="oval-up" src="./img/main/product/Oval.png" alt="Oval_up" />
 
 				<img
@@ -189,6 +189,64 @@
 								Torquem detraxit hosti et quidem se texit, ne ad eam.
 							</p>
 							<button class="btn btn_white">Get Started</button>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<!-- Лидеры  -->
+
+			<section class="choose">
+				<div class="container">
+					<h2 class="title choose__title">Why choose us?</h2>
+					<div class="leaderships">
+						<!-- Performance -->
+						<div class="leadership">
+							<img
+								class="leadership__img"
+								src="./img/main/choose/Performance.jpg"
+								alt="Performance"
+							/>
+							<h3 class="title leadership__title">Performance</h3>
+							<p class="text leadership_text">
+								Torquem detraxit hosti et quidem se texit, ne ad.
+							</p>
+						</div>
+						<!-- Entrepreneurship -->
+						<div class="leadership">
+							<img
+								class="leadership__img"
+								src="./img/main/choose/Entrepreneurship.jpg"
+								alt="Entrepreneurship"
+							/>
+							<h3 class="title leadership__title">Entrepreneurship</h3>
+							<p class="text leadership_text">
+								Torquem detraxit hosti et quidem se texit, ne ad.
+							</p>
+						</div>
+						<!-- Authenticity -->
+						<div class="leadership">
+							<img
+								class="leadership__img"
+								src="./img/main/choose/Authenticity.jpg"
+								alt="Authenticity"
+							/>
+							<h3 class="title leadership__title">Authenticity</h3>
+							<p class="text leadership_text">
+								Torquem detraxit hosti et quidem se texit, ne ad.
+							</p>
+						</div>
+						<!-- Kindness -->
+						<div class="leadership">
+							<img
+								class="leadership__img"
+								src="./img/main/choose/Kindness.jpg"
+								alt="Kindness"
+							/>
+							<h3 class="title leadership__title">Entrepreneurship</h3>
+							<p class="text leadership_text">
+								Torquem detraxit hosti et quidem se texit, ne ad.
+							</p>
 						</div>
 					</div>
 				</div>
