add feedback block

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<!-- header -->
 		<!-- Логотип + текст в шапке -->
 
-		<div class="container none">
+		<div class="container">
 			<div class="logo-conteiner">
 				<div class="logo">
 					<img src="./img/header/logo.svg" alt="logo" />
@@ -40,7 +40,7 @@
 
 		<!-- Заголовок + форма + кнопка -->
 
-		<header class="header container none">
+		<header class="header container">
 			<div class="header__left">
 				<h1 class="header__title">
 					Find your custom matched commercial real estate space.
@@ -74,7 +74,7 @@
 		<main>
 			<!-- Клиенты логотипы -->
 
-			<section class="clients none">
+			<section class="clients">
 				<div class="container clients__wrap">
 					<img src="./img/main/clients/logo-1.svg" alt="clients-1" />
 					<img src="./img/main/clients/logo-2.svg" alt="clients-2" />
@@ -84,7 +84,7 @@
 			</section>
 
 			<!-- Информация -->
-			<section class="information information__bottom none">
+			<section class="information information__bottom">
 				<div class="information__pictures">
 					<div class="picture">
 						<img
@@ -119,7 +119,7 @@
 
 			<!-- Продукт -->
 
-			<section class="product container none">
+			<section class="product container">
 				<img class="oval-up" src="./img/main/product/Oval.png" alt="Oval_up" />
 
 				<img
@@ -212,7 +212,9 @@
 								Torquem detraxit hosti et quidem se texit, ne ad.
 							</p>
 						</div>
+
 						<!-- Entrepreneurship -->
+
 						<div class="leadership">
 							<img
 								class="leadership__img"
@@ -224,7 +226,9 @@
 								Torquem detraxit hosti et quidem se texit, ne ad.
 							</p>
 						</div>
+
 						<!-- Authenticity -->
+
 						<div class="leadership">
 							<img
 								class="leadership__img"
@@ -236,7 +240,9 @@
 								Torquem detraxit hosti et quidem se texit, ne ad.
 							</p>
 						</div>
+
 						<!-- Kindness -->
+
 						<div class="leadership">
 							<img
 								class="leadership__img"
@@ -249,6 +255,68 @@
 							</p>
 						</div>
 					</div>
+				</div>
+			</section>
+
+			<!-- Обратная связь -->
+
+			<section class="feedback">
+				<div class="container feedback__intro">
+					<h2 class="title feedback__title">
+						Thanks for your nice words to us
+					</h2>
+					<p class="text feedback__text">
+						Si sine causa, nollem me tamen laudandis maioribus meis corrupisti
+						nec voluptas
+					</p>
+				</div>
+				<div class="container reviews">
+					<!-- Обзор №1 -->
+
+					<div class="review review_shadow">
+						<img
+							class="review__img"
+							src="./img/main/feedback/girl-1.jpg"
+							alt="girl-1"
+						/>
+						<p class="text review__text">
+							"Omne animal, simul atque integre iudicante itaque earum motus
+							et."
+						</p>
+						<h3 class="title review__title">Arend Pellewever</h3>
+						<p class="text review__surname  review__surname_orange">Baltimore</p>
+					</div>
+
+					<!-- Обзор № 2 -->
+
+					<div class="review">
+						<img
+							class="review__img"
+							src="./img/main/feedback/girl-2.jpg"
+							alt="girl-1"
+						/>
+						<p class="text review__text">
+							"In quo quaerimus, non emolumento aliquo, sed quia voluptas sit."
+						</p>
+						<h3 class="title review__title">Leo Knight</h3>
+						<p class="text review__surname">Cleveland</p>
+					</div>
+
+						<!-- Обзор № 3 -->
+
+						<div class="review">
+						<img
+							class="review__img"
+							src="./img/main/feedback/girl-3.jpg"
+							alt="girl-1"
+						/>
+						<p class="text review__text">
+							"Filium morte multavit si sine causa? quae fuerit causa, nollem."
+						</p>
+						<h3 class="title review__title">Lisanne Viscaal</h3>
+						<p class="text review__surname">Lyon</p>
+					</div>
+
 				</div>
 			</section>
 		</main>
